# raif_hack_antifraud_detect

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  attack_description.txt  docker-compose.local.yml  justfile  pyproject.toml  skills-lock.json
.github/workflows/: release.yml
app/: client.py  local_rules.py  logging_config.py  main.py  models.py  run.py  settings.py  statistical_rules.json
app/chains/: __init__.py  category_patterns.json  classification_chain.py  detection_chain.py  llm.py  pipeline.py  prompts.py  schemas.py  semantic.py  train.json
app/routers/: __init__.py  check.py  health.py  session_red_flag
data/: check_request_labeled.json  generated_dialogs.json  Описание каждой из атаки.txt
notebooks/: eda.ipynb
plans/: prompt_improvement_plan.md
scripts/: validate.py
tests/: test_check.py
